fix just right date spacing to be just right

--- a/user/themes/sensorium20/src/assets/scss/components/_date.scss
+++ b/user/themes/sensorium20/src/assets/scss/components/_date.scss
@@ -9,10 +9,4 @@
 			margin: 0 4%;
 		}
 	}
-
-	@include breakpoint( xxlarge ) {
-		&-sep {
-			margin: 0 4.2%;
-		}
-	}
 }
